<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".NovoCadastroActivity">

    <EditText
        android:id="@+id/novoCadastroEmail"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/novaSenha"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/repetirSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novoCadastroEmail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/repetirSenha"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/repetir_a_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmarCadastro"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:text="@string/confirmar"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:text="@string/voltar"
        app:backgroundTint="#AFAEAE"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarCadastro"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/novoCadastroTv"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:text="@string/novo_cadastro"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/novoCadastroEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>